add compilation flags